<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:background="@drawable/home_list_item_bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        >
        <TextView
            android:id="@+id/currency_symbol"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:layout_marginLeft="0dp"
            android:text="@string/currency_logo"
            android:maxLines="2"
            android:background="@drawable/circular_currency_background"
            android:textSize="16sp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/rate"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:maxLines="2"
            android:text="@string/currency_value"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/currency_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:gravity="center"
            android:textColor="#f54a4a"
            android:maxLines="2"
            android:text="@string/currency_symbol" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#e4e4e4"
        android:layout_alignParentBottom="true"
        android:layout_height="1dp"
        android:visibility="visible"
        />
</LinearLayout>
