<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/home_list_item_bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        >
        <TextView
            android:id="@+id/currency_symbol"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:layout_marginLeft="0dp"
            android:text="@string/currency_logo"
            android:maxLines="2"
            android:background="@drawable/circular_currency_background"
            android:textSize="16sp"
            android:layout_marginRight="8dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:maxLines="2"
                android:text="@string/currency_value"
                android:layout_marginBottom="4dp"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/date_time"
                android:textSize="12sp"
                android:textColor="@color/colorFaded" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:layout_gravity="top"
                android:id="@+id/currencyCoin"
                android:visibility="visible"
                android:text="BTC"
                />
            <TextView
                android:id="@+id/currency_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#f54a4a"
                android:text="@string/currency_symbol" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/colorAccent2"
        android:layout_alignParentBottom="true"
        android:layout_height="1dp"
        android:visibility="visible"
        />
</LinearLayout>
