<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    tools:context="com.ftech.criptoapp.cardview.CardActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/home_actionbar_bg"
            android:layout_width="match_parent"
            app:layout_collapseMode="pin"
            android:layout_height="?attr/actionBarSize"
            android:visibility="visible"
            android:background="?attr/colorPrimary"
            layout = "@layout/actionbar4return"
            />

        <View
            android:layout_width="match_parent"
            android:background="#45a351"
            android:layout_alignParentBottom="true"
            android:layout_height="4dp"
            android:visibility="visible"
            />
    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:id="@+id/cardview_base_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/card_crypto_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/bitcoin"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:id="@+id/card_currency_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_currency_symbol"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/circular_currency_background"
                    android:gravity="center"
                    android:textColor="#eee"
                    android:text="@string/currency_logo"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/card_currency_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/crytoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/coin_label"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="16dp"
                android:textAppearance="?android:textAppearanceSmall"
                />
            <Spinner
                android:id="@+id/cur_coin_spiner"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/curLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/currency_label"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="4dp"
                android:textAppearance="?android:textAppearanceSmall"
                />
            <Spinner
                android:id="@+id/cur_name_spiner"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/boxLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/convert_box_label"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="8dp"
                android:textAppearance="?android:textAppearanceSmall"
                />
            <EditText
                android:id="@+id/convertBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/currency_edit_hint"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:inputType="numberDecimal"
                android:textAppearance="?android:textAppearanceSmall"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:id="@+id/CreateNewCard"
                android:paddingBottom="8dp"
                android:text="@string/create_card"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:id="@+id/viewCards"
                android:layout_weight="1"
                android:text="@string/view_card"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
